--- a/test-output/old/Multiple-Test-Login/reporter-output.html
+++ b/test-output/old/Multiple-Test-Login/reporter-output.html
@@ -1,7 +1,7 @@
 <h2>Reporter output</h2><table><tr><td>- - - DataBase Connected Succesfully - - -</td></tr>
 <tr><td>Execution of Suite File was Started</td></tr>
 <tr><td> - - - chrome Has Launched Succesfully - - - </td></tr>
-<tr><td>Runnning Current Thread: 1</td></tr>
+<tr><td>Runnning Current Thread: 16</td></tr>
 <tr><td>agent1 --- Logged Into Agent Module Succesfully --- </td></tr>
 <tr><td>Successfully Switched to Default Frame</td></tr>
 <tr><td>Successfully Switched to Main Frame</td></tr>
@@ -210,6 +210,7 @@
 <tr><td>Test is Skipped ---> MultipleLogin</td></tr>
 <tr><td>Test is Skipped ---> MultipleLogin</td></tr>
 <tr><td>Test is Skipped ---> MultipleLogin</td></tr>
+<tr><td>Execution of Suite File was Started</td></tr>
 <tr><td> - - - chrome Has Closed Succesfully - - - </td></tr>
 <tr><td>Execution of Suite File was Finished</td></tr>
 <tr><td>- - - DataBase Closed Succesfully - - - </td></tr>
