--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,45 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Agent_Module.AgentMultipleLoginTest</td>
+<td>AdminModule.AdminOperationsTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>MultipleLogin</td>
+<td>AdminLogout</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>bcConfigration</td>
-<td>smokeSuite regressionSuite </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bmConfigration</td>
-<td>smokeSuite regressionSuite </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>amConfigration</td>
-<td>smokeSuite regressionSuite </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>acConfigration</td>
-<td>smokeSuite regressionSuite </td>
 </tr>
 </table>
