--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,216 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>- - - DataBase Connected Succesfully - - -</td></tr>
-<tr><td>Execution of Suite File was Started</td></tr>
-<tr><td> - - - chrome Has Launched Succesfully - - - </td></tr>
-<tr><td>Runnning Current Thread: 1</td></tr>
-<tr><td>agent1 --- Logged Into Agent Module Succesfully --- </td></tr>
-<tr><td>Successfully Switched to Default Frame</td></tr>
-<tr><td>Successfully Switched to Main Frame</td></tr>
-<tr><td>Successfully Switched to CRM Frame</td></tr>
-<tr><td>Primary Number Call Ended Succesfully</td></tr>
-<tr><td>Data of primary Number Recorded Succesfully in CRM</td></tr>
-<tr><td>CRM updated Succesfully</td></tr>
-<tr><td>Clicked on Logout Button Succesfully</td></tr>
-<tr><td>agent1 --- Logged Out from Agent Module Succesfully --- </td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td>Test is Skipped ---> MultipleLogin</td></tr>
-<tr><td> - - - chrome Has Closed Succesfully - - - </td></tr>
-<tr><td>Execution of Suite File was Finished</td></tr>
-<tr><td>- - - DataBase Closed Succesfully - - - </td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
