--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,15 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>- - - DataBase Connected Succesfully - - -</td></tr>
+<tr><td>Execution of Suite File was Started</td></tr>
+<tr><td> - - - firefox Has Launched Succesfully - - - </td></tr>
+<tr><td>--- Logged Into Admin Module Succesfully ---</td></tr>
+<tr><td>SystemSettings Dropdown clicked Succesfully</td></tr>
+<tr><td>Clicked on List Button</td></tr>
+<tr><td>Switched to Active List Frame</td></tr>
+<tr><td>Clicked on Add List Lookup Button</td></tr>
+<tr><td>Kiran Name Added Succesfully to the List Name Textbox</td></tr>
+<tr><td>List Created Successfully</td></tr>
+<tr><td> - - - firefox Has Closed Succesfully - - - </td></tr>
+<tr><td> - - - firefox Has Closed Succesfully - - - </td></tr>
+<tr><td>Execution of Suite File was Finished</td></tr>
+<tr><td>- - - DataBase Closed Succesfully - - - </td></tr>
+</table>
