--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:29:05</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&lt;&lt;acConfigration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:29:05</td>   <td>-514</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&lt;&lt;acConfigration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="8bb695">  <td>23/09/04 13:28:57</td>   <td>-8728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AdminOperationTest.adminOperationsTest()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">adminOperationsTest</td> 
+  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:29:05</td>   <td>-515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&lt;&lt;amConfigration</td> 
+<td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:29:06</td>   <td>147</td> <td title="&lt;&lt;BaseClass.asConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&lt;&lt;asConfigration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:28:55</td>   <td>-10717</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&gt;&gt;bcConfigration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:28:57</td>   <td>-8728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&gt;&gt;bmConfigration</td> 
+<td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="abf3bf">  <td>23/09/04 13:28:55</td>   <td>-10845</td> <td title="&gt;&gt;BaseClass.bsConfigration()[pri:0, instance:AdminModule.AdminOperationTest@48075da3]">&gt;&gt;bsConfigration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
 </table>
