--- a/ExtentReports/Reports - 04-Sep-2023-15-52-02 .html
+++ b/ExtentReports/Reports - 04-Sep-2023-15-52-02 .html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">CONVOX CCS 3.2.4 Execution Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 4, 2023 01:11:45 pm</span></a>
+<a href="#"><span class="badge badge-primary">Sep 4, 2023 03:52:02 pm</span></a>
 </li>
 </ul>
 </div>
@@ -89,7 +89,7 @@
           <div class="test-detail">
             <span class="meta text-white badge badge-sm"></span>
             <p class="name">adminOperationsTest</p>
-            <p class="text-sm"><span>13:11:47 pm</span> / <span>11.275 secs</span></p>
+            <p class="text-sm"><span>15:52:15 pm</span> / <span>33.992 secs</span></p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
@@ -97,13 +97,13 @@
 <div class="info">
 <div class='float-right'><span class='badge badge-default'>#test-id=1</span></div>
 <h5 class="test-status text-fail">adminOperationsTest</h5>
-<span class='badge badge-success'>09.04.2023 13:11:47</span>
-<span class='badge badge-danger'>09.04.2023 13:11:58</span>
-<span class='badge badge-default'>11.275 secs</span>
+<span class='badge badge-success'>09.04.2023 15:52:15</span>
+<span class='badge badge-danger'>09.04.2023 15:52:49</span>
+<span class='badge badge-default'>33.992 secs</span>
 </div>
 </div>
 </div>    <div class="row mb-3"><div class="col-md-3">
-    <img data-featherlight='/home/dtel/git/Convox-CCS/.\ScreenShots\adminOperationsTest04-Sep-2023-13-11-58.png' src="/home/dtel/git/Convox-CCS/.\ScreenShots\adminOperationsTest04-Sep-2023-13-11-58.png">
+    <img data-featherlight='/home/dtel/git/Convox-CCS/ScreenShotsadminOperationsTest04-Sep-2023-15-52-48.png' src="/home/dtel/git/Convox-CCS/ScreenShotsadminOperationsTest04-Sep-2023-15-52-48.png">
     
     </div></div>
 <div class="detail-body mt-4">
@@ -112,30 +112,30 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>1:11:47 pm</td>
+        <td>3:52:15 pm</td>
         <td>
           Test is Started
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:11:58 pm</td>
+        <td>3:52:48 pm</td>
         <td>
-          adminOperationsTest04-Sep-2023-13-11-58 ---> Test is Failed
+          adminOperationsTest04-Sep-2023-15-52-48 ---> Test is Failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:11:58 pm</td>
+        <td>3:52:48 pm</td>
         <td>
-          <textarea readonly class="code-block">org.openqa.selenium.NoSuchElementException: Unable to locate element: //img[@title='Add List']
+          <textarea readonly class="code-block">org.openqa.selenium.NoSuchElementException: Unable to locate element: //img[@src="../images/ADMIN_logo.png"]
 For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
 Build info: version: '4.4.0', revision: 'e5c75ed026a'
 System info: host: 'pop-os', ip: '127.0.1.1', os.name: 'Linux', os.arch: 'amd64', os.version: '6.4.6-76060406-generic', java.version: '17.0.8'
 Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [43ed34ec-464a-4bd5-8c3d-4c609f5fc135, findElement {using=xpath, value=//img[@title='Add List']}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 116.0.3, moz:accessibilityChecks: false, moz:buildID: 20230815173142, moz:debuggerAddress: 127.0.0.1:34275, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 6.4.6-76060406-generic, moz:processID: 290819, moz:profile: /tmp/rust_mozprofileu6x4K3, moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: LINUX, proxy: Proxy(), se:cdp: ws://127.0.0.1:34275/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: 43ed34ec-464a-4bd5-8c3d-4c609f5fc135
+Command: [5381dd2b-90d8-4123-a77c-c2f6106de8d8, findElement {using=xpath, value=//img[@src="../images/ADMIN_logo.png"]}]
+Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 116.0.3, moz:accessibilityChecks: false, moz:buildID: 20230815173142, moz:debuggerAddress: 127.0.0.1:57309, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 6.4.6-76060406-generic, moz:processID: 306247, moz:profile: /tmp/rust_mozprofilehVXChy, moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: LINUX, proxy: Proxy(), se:cdp: ws://127.0.0.1:57309/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
+Session ID: 5381dd2b-90d8-4123-a77c-c2f6106de8d8
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -155,8 +155,8 @@ Session ID: 43ed34ec-464a-4bd5-8c3d-4c609f5fc135
 	at org.openqa.selenium.support.pagefactory.DefaultElementLocator.findElement(DefaultElementLocator.java:70)
 	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:39)
 	at jdk.proxy2/jdk.proxy2.$Proxy23.click(Unknown Source)
-	at Convox.ObjectRepository.AdminModule.AdminHomePage.ListCreation(AdminHomePage.java:171)
-	at AdminModule.AdminOperationTest.adminOperationsTest(AdminOperationTest.java:37)
+	at Convox.ObjectRepository.AdminModule.AdminHomePage.AdminLogout(AdminHomePage.java:161)
+	at AdminModule.AdminOperationTest.adminOperationsTest(AdminOperationTest.java:41)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -245,7 +245,7 @@ Session ID: 43ed34ec-464a-4bd5-8c3d-4c609f5fc135
 <tbody>
 <tr>
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>13:11:47 pm</td>
+<td>15:52:15 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>adminOperationsTest</a>
 </td>
@@ -276,13 +276,13 @@ Session ID: 43ed34ec-464a-4bd5-8c3d-4c609f5fc135
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 4, 2023 01:11:45 pm</h3>
+<h3>Sep 4, 2023 03:52:02 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 4, 2023 01:12:01 pm</h3>
+<h3>Sep 4, 2023 03:52:49 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
