--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -6,8 +6,11 @@
 <tr><td>Clicked on List Button</td></tr>
 <tr><td>Switched to Active List Frame</td></tr>
 <tr><td>Clicked on Add List Lookup Button</td></tr>
-<tr><td>Kiran Name Added Succesfully to the List Name Textbox</td></tr>
+<tr><td>deepu Name Added Succesfully to the List Name Textbox</td></tr>
 <tr><td>List Created Successfully</td></tr>
+<tr><td>Switched to Active List Frame</td></tr>
+<tr><td>Campaign Started Succesfully</td></tr>
+<tr><td>--- Logged Out from Admin Module Succesfully ---</td></tr>
 <tr><td> - - - firefox Has Closed Succesfully - - - </td></tr>
 <tr><td> - - - firefox Has Closed Succesfully - - - </td></tr>
 <tr><td>Execution of Suite File was Finished</td></tr>
