--- a/ExtentReports/Reports - 04-Sep-2023-15-23-32 .html
+++ b/ExtentReports/Reports - 04-Sep-2023-15-23-32 .html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">CONVOX CCS 3.2.4 Execution Reports</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sep 4, 2023 01:01:20 pm</span></a>
+<a href="#"><span class="badge badge-primary">Sep 4, 2023 03:23:32 pm</span></a>
 </li>
 </ul>
 </div>
@@ -89,7 +89,7 @@
           <div class="test-detail">
             <span class="meta text-white badge badge-sm"></span>
             <p class="name">adminOperationsTest</p>
-            <p class="text-sm"><span>13:01:28 pm</span> / <span>3.259 secs</span></p>
+            <p class="text-sm"><span>15:23:34 pm</span> / <span>15.938 secs</span></p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
@@ -97,13 +97,13 @@
 <div class="info">
 <div class='float-right'><span class='badge badge-default'>#test-id=1</span></div>
 <h5 class="test-status text-fail">adminOperationsTest</h5>
-<span class='badge badge-success'>09.04.2023 13:01:28</span>
-<span class='badge badge-danger'>09.04.2023 13:01:31</span>
-<span class='badge badge-default'>3.259 secs</span>
+<span class='badge badge-success'>09.04.2023 15:23:34</span>
+<span class='badge badge-danger'>09.04.2023 15:23:50</span>
+<span class='badge badge-default'>15.938 secs</span>
 </div>
 </div>
 </div>    <div class="row mb-3"><div class="col-md-3">
-    <img data-featherlight='/home/dtel/git/Convox-CCS/.\ScreenShots\adminOperationsTest04-Sep-2023-13-01-31.png' src="/home/dtel/git/Convox-CCS/.\ScreenShots\adminOperationsTest04-Sep-2023-13-01-31.png">
+    <img data-featherlight='/home/dtel/git/Convox-CCS/ScreenShotsadminOperationsTest04-Sep-2023-15-23-50.png' src="/home/dtel/git/Convox-CCS/ScreenShotsadminOperationsTest04-Sep-2023-15-23-50.png">
     
     </div></div>
 <div class="detail-body mt-4">
@@ -112,30 +112,30 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>1:01:28 pm</td>
+        <td>3:23:34 pm</td>
         <td>
           Test is Started
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:01:31 pm</td>
+        <td>3:23:50 pm</td>
         <td>
-          adminOperationsTest04-Sep-2023-13-01-31 ---> Test is Failed
+          adminOperationsTest04-Sep-2023-15-23-50 ---> Test is Failed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>1:01:31 pm</td>
+        <td>3:23:50 pm</td>
         <td>
-          <textarea readonly class="code-block">org.openqa.selenium.NoSuchElementException: The element with the reference 0168117c-d465-4b55-a913-fda05ff73762 is not known in the current browsing context
-For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
+          <textarea readonly class="code-block">org.openqa.selenium.InvalidSelectorException: Given xpath expression "body > div:nth-child(1)" is invalid: NamespaceError: An attempt was made to create or change an object in a way which is incorrect with regard to namespaces
+For documentation on this error, please visit: https://selenium.dev/exceptions/#invalid_selector_exception
 Build info: version: '4.4.0', revision: 'e5c75ed026a'
 System info: host: 'pop-os', ip: '127.0.1.1', os.name: 'Linux', os.arch: 'amd64', os.version: '6.4.6-76060406-generic', java.version: '17.0.8'
 Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Command: [9b9d599b-faab-4152-95c9-20555df9490b, actions {actions=[org.openqa.selenium.interactions.Sequence@38ee7a9d]}]
-Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 116.0.3, moz:accessibilityChecks: false, moz:buildID: 20230815173142, moz:debuggerAddress: 127.0.0.1:40189, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 6.4.6-76060406-generic, moz:processID: 289318, moz:profile: /tmp/rust_mozprofileRytq4T, moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: LINUX, proxy: Proxy(), se:cdp: ws://127.0.0.1:40189/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
-Session ID: 9b9d599b-faab-4152-95c9-20555df9490b
+Command: [beebbf5f-8fa6-4ed6-88aa-403d90d89038, findElements {using=xpath, value=body > div:nth-child(1)}]
+Capabilities {acceptInsecureCerts: true, browserName: firefox, browserVersion: 116.0.3, moz:accessibilityChecks: false, moz:buildID: 20230815173142, moz:debuggerAddress: 127.0.0.1:52081, moz:geckodriverVersion: 0.33.0, moz:headless: false, moz:platformVersion: 6.4.6-76060406-generic, moz:processID: 300780, moz:profile: /tmp/rust_mozprofileVqot7X, moz:shutdownTimeout: 60000, moz:webdriverClick: true, moz:windowless: false, pageLoadStrategy: normal, platformName: LINUX, proxy: Proxy(), se:cdp: ws://127.0.0.1:52081/devtoo..., se:cdpVersion: 85.0, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify}
+Session ID: beebbf5f-8fa6-4ed6-88aa-403d90d89038
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -148,12 +148,12 @@ Session ID: 9b9d599b-faab-4152-95c9-20555df9490b
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
 	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:547)
-	at org.openqa.selenium.remote.RemoteWebDriver.perform(RemoteWebDriver.java:615)
-	at org.openqa.selenium.interactions.Actions$BuiltAction.perform(Actions.java:567)
-	at org.openqa.selenium.interactions.Actions.perform(Actions.java:536)
-	at Convox.GenericLibraries.WebDriverLibrary.mouseHoverOn(WebDriverLibrary.java:135)
-	at Convox.ObjectRepository.AdminModule.AdminHomePage.ListCreation(AdminHomePage.java:166)
-	at AdminModule.AdminOperationTest.adminOperationsTest(AdminOperationTest.java:37)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElements(ElementLocation.java:179)
+	at org.openqa.selenium.remote.ElementLocation.findElements(ElementLocation.java:102)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElements(RemoteWebDriver.java:380)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElements(RemoteWebDriver.java:372)
+	at Convox.ObjectRepository.AdminModule.AdminHomePage.ListCreation(AdminHomePage.java:178)
+	at AdminModule.AdminOperationTest.adminOperationsTest(AdminOperationTest.java:38)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -223,13 +223,13 @@ Session ID: 9b9d599b-faab-4152-95c9-20555df9490b
 <li class="test-item">
 <div class="open-test">
 <div class="test-detail">
-<p class="name">org.openqa.selenium.NoSuchElementException</p>
+<p class="name">org.openqa.selenium.InvalidSelectorException</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>org.openqa.selenium.NoSuchElementException</h4>
+<h4>org.openqa.selenium.InvalidSelectorException</h4>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -242,7 +242,7 @@ Session ID: 9b9d599b-faab-4152-95c9-20555df9490b
 <tbody>
 <tr>
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>13:01:28 pm</td>
+<td>15:23:34 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='1'>adminOperationsTest</a>
 </td>
@@ -273,13 +273,13 @@ Session ID: 9b9d599b-faab-4152-95c9-20555df9490b
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sep 4, 2023 01:01:20 pm</h3>
+<h3>Sep 4, 2023 03:23:32 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sep 4, 2023 01:01:32 pm</h3>
+<h3>Sep 4, 2023 03:23:51 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
